text animation alignment fixed for mobile

--- a/Portfolio/less/home.less
+++ b/Portfolio/less/home.less
@@ -981,6 +981,7 @@ h1 .flip span.down {
   .service-intro
     {
       text-align: center;
+      line-height: 32px;
     }
     .timeline .panel-container .slide-panel 
     {
@@ -1029,7 +1030,9 @@ h1 .flip span.down {
   .service-intro .flip
   {
     width: 25%;
+    top: -24px;
   }
+
 }
 @media screen and (max-width: 384px)
 {
