--- a/Portfolio/less/homepage-2.less
+++ b/Portfolio/less/homepage-2.less
@@ -922,7 +922,7 @@ figure.snip0019:hover figcaption::before {
   {
     font-size: 30px;
     color: #E4E3E1;
-    line-height: 32px;
+    line-height: 33px;
   }
   .about-content .read-more
   {
